--- a/educationgateway-Frontend/package.json
+++ b/educationgateway-Frontend/package.json
@@ -23,7 +23,8 @@
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
