--- a/GateWay-Education-Backend-main/package.json
+++ b/GateWay-Education-Backend-main/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
