--- a/educationgateway-Frontend/package.json
+++ b/educationgateway-Frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "daisyui": "^4.12.23",
+    "lucide-react": "^0.525.0",
     "pagedone": "^1.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
