--- a/GateWay-Education-Backend-main/.env
+++ b/GateWay-Education-Backend-main/.env
@@ -16,7 +16,7 @@
 
 # Server Port
 PORT=5003
-CLIENT_URL=http://localhost:5173
+CLIENT_URL=https://localhost:5173
 
 RESET_TOKEN_EXPIRY=6h
 # MongoDB Connection String
