--- a/GateWay-Education-Backend-main/package.json
+++ b/GateWay-Education-Backend-main/package.json
@@ -32,6 +32,7 @@
     "nodemailer": "^6.10.0",
     "react-router": "^7.7.0",
     "react-router-dom": "^7.7.0",
+    "selfsigned": "^3.0.1",
     "svg-captcha": "^1.4.0",
     "validator": "^13.15.15",
     "winston": "^3.17.0",
